# HelloSFML

./: CMakeLists.txt  CMakeRC.cmake  README.md
src/: main.cpp
